@@ -217,6 +217,10 @@ public abstract class DinosaurEntity extends EntityCreature implements IEntityAd
 
     public DinosaurEntity(World world) {
         super(world);
+        
+        //Necessary to set the bounding box, rather than having NULL_BOX
+        setSize(1, 1);
+        
         this.moveHelper = new DinosaurMoveHelper(this);
         this.jumpHelper = new DinosaurJumpHelper(this);
 
